added admin page with delete action, updated navbar, updated game history url, updated timezone

--- a/site/ooto/templates/ooto/layout.html
+++ b/site/ooto/templates/ooto/layout.html
@@ -30,12 +30,18 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
+                        <ul class="navbar-nav me-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'history' %}">previous</a>
                             </li>
                         </ul>
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin' %}">admin</a>
+                            </li>
+                        </ul>
                     </div>
+                    
                 </nav>
             </header>
         </div>
