added user choices table

--- a/site/ooto/templates/ooto/admin.html
+++ b/site/ooto/templates/ooto/admin.html
@@ -40,7 +40,7 @@
 
             <div class="card bg-dark border-secondary">
                 <div class="card-header">
-                    <h2 class="h3">Existing Choices</h2>
+                    <h2 class="h3">All Choices</h2>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -116,7 +116,7 @@
 
             <div class="card bg-dark border-secondary">
                 <div class="card-header">
-                    <h2 class="h3">Existing Games</h2>
+                    <h2 class="h3">All Games</h2>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
