cenetered text, added cool buttons, removed alpine js from layout

--- a/site/ooto/templates/ooto/home.html
+++ b/site/ooto/templates/ooto/home.html
@@ -1,19 +1,21 @@
 {% extends "ooto/layout.html" %}
 {% block content %}
-    <div class="container text-light ">
-        <h2>Today's Choices</h2>
+    <div class="container text-light mt-2">
+        <h1 class="h2 text-center">Today's Choices</h1>
         <div class="container">
             {% for game in games %}
                 <div class="row">
-                    <div class="col-6">
-                        <h3>
-                            <a href="{% url 'vote' game.id game.first_choice.id %}">Vote for {{ game.first_choice }}</a>
-                        </h3>
+                    <div class="col-6 text-center">
+                        <button class="btn btn-primary" type="button">
+                            <a class="text-light"
+                               href="{% url 'vote' game.id game.first_choice.id %}">Vote for {{ game.first_choice }}</a>
+                        </button>
                     </div>
-                    <div class="col-6">
-                        <h3>
-                            <a href="{% url 'vote' game.id game.second_choice.id %}">Vote for {{ game.second_choice }}</a>
-                        </h3>
+                    <div class="col-6 text-center">
+                        <button class="btn btn-secondary" type="button">
+                            <a class="text-light"
+                               href="{% url 'vote' game.id game.second_choice.id %}">Vote for {{ game.second_choice }}</a>
+                        </button>
                     </div>
                 </div>
             {% endfor %}
